Fixed up the highlight alignment on the project page

--- a/sarahhkeast_portfolio/src/styles/components/project-content.scss
+++ b/sarahhkeast_portfolio/src/styles/components/project-content.scss
@@ -24,7 +24,10 @@
         content: '';
         position: absolute;
         left: 10%;
-        top: 10px;
+        top: 16px;
+        @media (max-width: $breakpoint-desktop) {
+            width: 40px;
+        }
         @media (max-width: $breakpoint-tablet) {
             display: none;
         }
